fix: make banner text more readable

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -530,7 +530,7 @@ body {
 }
 
 #panels ul::after {
-    content: attr(class);
+content: attr(class);
     position: absolute;
     display: flex;
     text-transform: uppercase;
@@ -539,19 +539,20 @@ body {
     height: 250px;
     padding: 1em;
     margin: auto;
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 1);
+    box-shadow: inset 0 0 0 1px rgb(255 255 255 / 50%);
     left: calc(15% - 42.5px);
     bottom: 0;
     top: 0;
-    background: rgba(0, 0, 0, .4);
-    color: #fff;
+    background: linear-gradient(to top, #000000, rgb(191 191 191 / 40%));
+    color: rgb(255 255 255 / 65%);
     letter-spacing: 1px;
     font: 100 30px 'Nunito', sans-serif;
     text-align: center;
     flex-wrap: wrap;
     word-break: break-all;
     align-items: center;
-    mix-blend-mode: overlay;
+    mix-blend-mode: screen;
+    backdrop-filter: blur(3px);
 }
 
 #panels > ul:first-child .links li:not(:last-child) {
